fix: try overflow for scrollbar

--- a/src/renderer/styles/css/components.css
+++ b/src/renderer/styles/css/components.css
@@ -14,7 +14,9 @@
 
 #app-container {
   width: 100vw;
-  height: 100vh; 
+  height: 100vh;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 #header-container {
